fix: return visible scrollbar

--- a/christmas-shop/sass/base/_normalize.scss
+++ b/christmas-shop/sass/base/_normalize.scss
@@ -6,9 +6,6 @@
     -webkit-tap-highlight-color: transparent;
     
 }
-::-webkit-scrollbar { 
-    display: none;
-}
 
 body {
     border: none;
